--- a/admin/src/App.scss
+++ b/admin/src/App.scss
@@ -26,3 +26,11 @@
         background-color: #ddd;
     }
 }
+
+/* Auth Layout */
+.auth-layout {
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+}
