feat: add menus preloader

--- a/admin/src/App.scss
+++ b/admin/src/App.scss
@@ -9,6 +9,10 @@
     display: flex !important;
 }
 
+.justify-content-center {
+    justify-content: center !important;
+}
+
 .justify-content-between {
     justify-content: space-between !important;
 }
