ref: replace logo

--- a/admin/src/App.scss
+++ b/admin/src/App.scss
@@ -51,9 +51,7 @@
     align-items: center;
     background-color: #fff;
     &__logo {
-        width: 200px;
-        height: 40px;
-        background-color: #ddd;
+        font-size: 24px;
     }
 }
 
