feat: category editor UI implementation

--- a/admin/src/App.scss
+++ b/admin/src/App.scss
@@ -39,6 +39,10 @@
     margin-bottom: 0 !important;
 }
 
+.move {
+    cursor: move !important;
+}
+
 /* Default Layout */
 .default-layout {
     display: flex;
