--- a/admin/src/components/menu/cards/CategoriesEditorCard.scss
+++ b/admin/src/components/menu/cards/CategoriesEditorCard.scss
@@ -1,12 +1,16 @@
 .category-editor {
-    &__content {
-      width: 100%;
-      height: calc(100vh - 360px);
-      &--loading,
-      &--empty {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
+  .ant-card-body {
+    padding: 0;
+  }
+
+  &__content {
+    width: 100%;
+    height: calc(100vh - 300px);
+    &--loading,
+    &--empty {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
+}
