--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -19,3 +19,14 @@
 .header {
   margin-bottom: 20px;
 }
+.btn__header{
+  display: flex;
+  align-items: center;
+}
+.btn__text{
+  min-width: 24px;
+  margin: 0  0 0 5px;
+  border-radius: 50%;
+  background-color: #ff9900;
+  padding: 2px;
+}
