--- a/admin/src/components/images/ImagesManagement.scss
+++ b/admin/src/components/images/ImagesManagement.scss
@@ -1,122 +1,135 @@
-.ant-btn.ph-upl-btn {
-  width: 104px;
-  height: 104px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.04);
-
-  .ph-upl-title {
-    margin-top: 8px;
-  }
-}
-
-.ant-modal.ph-upl-modal {
-  width: 90%;
-}
-
-.ant-modal-title > .ph-upl-modal-header {
-  display: flex;
-  flex-direction: row;
-  margin: 0;
-
-  h4 {
-    margin: 0;
-  }
-}
-
-.ph-item-cont {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.ph-item-cont.spin {
-  justify-content: center;
-}
-
-// normalize antd style for upload
-
-.ant-upload-picture-card-wrapper.photo-uploader {
-  width: 104px;
-  display: flex; 
-
-  .ant-upload.ant-upload-select-picture-card {
-    margin: 0;
-  }
-}
-
-.ph-item-marg {
-  margin-bottom: 10px;
-}
-
-.ph-item-img-cont {
-  .ant-card-body {
-    padding: 0;
-  }
-
-  border: 1px solid rgba(0, 0, 0, 0.18);
-  display: flex;
-  align-items: center;
-  position: relative;
-  width: 104px;
-  height: 104px;
-  padding: 5px;
-  overflow: hidden;
-
-  .ant-image {
-    display: flex;
-  }
-
-  .ph-item-icon {
-    opacity: 0; 
-    position: absolute; 
-    top: 45%; 
-    left: 0; 
-    right: 0; 
-    bottom: 0;
-    color: rgb(255, 255, 255);
-    transition: all .5s ease-in-out;
-    z-index: 2;
-  }
-
-  &:hover {
-    .ph-item-icon {
-      opacity: 1;
-    }
-  }
-
-  .ph-item-icon.select {
+@mixin icon {
+  opacity: 0;
+  position: absolute;
+  top: 45%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: #fff !important;
+  transition: all 0.5s ease-in-out;
+  z-index: 2;
+  &--select {
     right: 30%;
   }
-
-  .ph-item-icon.delete {
+  &--delete {
     left: 40%;
   }
 }
 
-.ph-item-img-cont:after { 
-  cursor: pointer;
-  content: ''; 
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  right: 0; 
-  bottom: 0; 
-  background: rgba(0,0,0,.5);  
-  opacity: 0; 
-  z-index: 1;
-  transition: all .5s ease-in-out;
-}
-
-.ph-item-img-cont:hover:after {
-  opacity: 1;
-}
-
-// Img Spin
-
-.img-spin-center {
+.image-uploader-preview {
+  position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.18);
   display: flex;
-  align-self: center;
-  justify-self: center;
+  align-items: center;
+  overflow: hidden;
+  &:hover {
+    &:after {
+      opacity: 1;
+    }
+    .image-uploader-preview-icon {
+      opacity: 1;
+    }
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    z-index: 1;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+  }
+
+  .image-uploader-preview-icon {
+    @include icon;
+  }
+}
+
+.image-uploader-select {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.85);
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.5715;
+  list-style: none;
+  font-feature-settings: "tnum";
+  outline: 0;
+  background-color: #fafafa;
+  border: 1px dashed #d9d9d9;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: border-color 0.3s;
+  &:hover {
+    border-color: #1890ff;
+  }
+  span {
+    display: block;
+    margin-top: 5px;
+  }
+}
+
+.image-uploader-modal {
+  &__header {
+    display: flex;
+    align-items: center;
+    h4 {
+      margin-bottom: 0;
+      margin-right: 10px;
+    }
+  }
+}
+
+.image-uploader-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.image-uploader-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  &:hover {
+    &:after {
+      opacity: 1;
+    }
+    .image-uploader-item__icon {
+      opacity: 1;
+    }
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    z-index: 1;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+  }
+  &__image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__icon {
+    @include icon;
+    font-size: 28px;
+  }
 }
