--- a/admin/src/components/menu/cards/DishEditorCard.scss
+++ b/admin/src/components/menu/cards/DishEditorCard.scss
@@ -5,3 +5,11 @@
         justify-content: flex-end;
     }
 }
+
+.tags-item {
+    &-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
