--- a/admin/src/components/menu/cards/DishesEditorCard.scss
+++ b/admin/src/components/menu/cards/DishesEditorCard.scss
@@ -14,3 +14,12 @@
 		}
 	}
 }
+
+@media screen and (max-width: 1600px) {
+	.menu-editor {
+		&__content {
+			height: auto;
+			max-height: calc(100vh - 300px);
+		}
+	}
+}
