--- a/admin/src/components/menu/cards/MenuCard.scss
+++ b/admin/src/components/menu/cards/MenuCard.scss
@@ -4,10 +4,24 @@
     margin-bottom: 10px;
     .menu-published,
     .menu-enabled-order {
+        &.published,
+        &.enabled-order {
+            color: #4caf50;
+        }
+        &.unpublished,
+        &.unenabled-order {
+            color: #ff9800;
+        }
         display: flex;
         align-items: center;
         &__label {
+            font-size: 0.85rem;
+            line-height: 1.375rem;
+            letter-spacing: 1px;
+            font-weight: 500;
             margin-left: 5px;
+            text-transform: uppercase;
+            opacity: 0.8;
         }
     }
 }
