--- a/admin/src/components/menu/items/DishItem.scss
+++ b/admin/src/components/menu/items/DishItem.scss
@@ -33,6 +33,18 @@
     font-size: 0.875rem;
     color: rgba(0, 0, 0, 0.6);
   }
+  &__meta {
+    span {
+      &:after {
+        content: " • ";
+      }
+      &:last-of-type {
+        &:after {
+          display: none;
+        }
+      }
+    }
+  }
   &__content {
     flex-grow: 1;
     display: flex;
