--- a/admin/src/components/dashboard/cards/CreateCardMenu.scss
+++ b/admin/src/components/dashboard/cards/CreateCardMenu.scss
@@ -1,6 +1,7 @@
 .create-menu-card {
     position: relative;
     height: 100%;
+    overflow: hidden;
     &__cover {
         position: absolute;
         top: 0;
@@ -11,6 +12,7 @@
             url("https://images.unsplash.com/photo-1455619452474-d2be8b1e70cd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
         background-size: cover;
         background-position: center center;
+        border-radius: 2px;
     }
     &__title {
         position: absolute;
