feat: calc total price

--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -1,4 +1,6 @@
 .cart__title{
-    padding-left: 8px;
+    padding: 0 8px;
     text-align: left;
+    display: flex;
+    justify-content: space-between;
 }
