feat: re-design client

--- a/admin/src/scss/main.scss
+++ b/admin/src/scss/main.scss
@@ -130,6 +130,7 @@
         border-color: $primary-color;
         margin: 15px !important;
         padding: 0 !important;
+        color: #fff !important;
         transition: 0.25 all ease;
         text-transform: uppercase;
         &:hover,
