feat: add mask to category card

--- a/client/src/components/CardCategory/CardCategory.scss
+++ b/client/src/components/CardCategory/CardCategory.scss
@@ -1,10 +1,30 @@
 .category-card {
+    &__cover-mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+    }
+    &__cover {
+        position: relative;
+        display: block;
+        cursor: default;
+        .ant-image,
+        .ant-image img {
+            display: block;
+        }
+    }
     &__title {
         position: absolute;
-        top: 10px;
+        z-index: 100;
+        bottom: 15px;
         left: 10px;
         color: #fff !important;
         font-weight: normal !important;
+        margin-bottom: 0 !important;
     }
 }
 
