--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,11 @@
 @import "~antd/dist/antd.css";
 
-html {
+body {
   overflow-y: scroll;
+}
+
+.ant-image-preview-mask {
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 /* Common */
@@ -74,7 +78,7 @@ html {
   }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 768px) {
   /* Default Layout */
   .default-layout {
     &__content {
