--- a/client/src/components/CardCategory/CardCategory.scss
+++ b/client/src/components/CardCategory/CardCategory.scss
@@ -35,6 +35,7 @@
 }
 
 .dish-item {
+    width: 100%;
     display: flex;
     gap: 10px;
     &__photo {
@@ -60,5 +61,11 @@
                 }
             }
         }
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .dish-item {
+        padding: 0 16px;
     }
 }
