--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -1,9 +1,14 @@
-.menu-bar {
+.bottom-navigation {
     position: fixed;
-    z-index: 99;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    z-index: 100;
+    height: 60px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.12), 0 5px 12px 4px rgba(0, 0, 0, 0.09);
 }
