--- a/admin/src/scss/main.scss
+++ b/admin/src/scss/main.scss
@@ -187,6 +187,9 @@
             font-size: 16px;
         }
     }
+    .app-footer {
+        padding: 24px;
+    }
 }
 
 @media screen and (max-width: 576px) {
