--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -93,3 +93,10 @@ body {
     }
   }
 }
+
+@media screen and (max-width: 576px) {
+  /* Default Layout */
+  .default-layout {
+    padding-bottom: 80px;
+  }
+}
