--- a/client/src/components/CardMenu/CardMenu.scss
+++ b/client/src/components/CardMenu/CardMenu.scss
@@ -1,4 +1,5 @@
 .menu-card {
+    margin-bottom: 20px !important;
     &.enabled {
         .menu-card__status {
             color: #4caf50;
@@ -23,7 +24,9 @@
         letter-spacing: 1px;
     }
     &__title {
-        font-size: 28px;
+        font-size: 24px;
         font-weight: normal;
+        white-space: normal;
+        line-height: 1.4;
     }
 }
