feat: add loading & empty

--- a/admin/src/components/dashboard/cards/PopularDishesCard.scss
+++ b/admin/src/components/dashboard/cards/PopularDishesCard.scss
@@ -50,3 +50,11 @@
         }
     }
 }
+
+.popular-dish-loading,
+.popular-dish-empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
