--- a/admin/src/components/dashboard/cards/PopularDishesCard.scss
+++ b/admin/src/components/dashboard/cards/PopularDishesCard.scss
@@ -1,5 +1,6 @@
 .popular-dishes-card {
     height: 100%;
+    cursor: default !important;
     &__title {
         margin: 0;
         padding: 10px;
