--- a/admin/src/scss/main.scss
+++ b/admin/src/scss/main.scss
@@ -204,6 +204,13 @@
     padding: 20px;
 }
 
+.app-footer {
+    a {
+        display: inline-block;
+        margin: 0 5px;
+    }
+}
+
 /* Media */
 @media screen and (max-width: 768px) {
     .app-header {
