--- a/admin/src/components/dashboard/cards/CreateCardMenu.scss
+++ b/admin/src/components/dashboard/cards/CreateCardMenu.scss
@@ -12,6 +12,8 @@
         width: 100%;
         height: 100%;
         .ant-image-img {
+            width: 100%;
+            height: 100%;
             object-fit: cover;
             border-radius: 2px;
         }
