--- a/admin/src/components/qrCode/QRCodeCard.scss
+++ b/admin/src/components/qrCode/QRCodeCard.scss
@@ -1,6 +1,15 @@
 .qr-code-card {
+  height: 100%;
   .ant-card-body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     padding: 10px;
+  }
+  .qr-code-image {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
   }
   .qr-code-actions {
     display: grid;
