feat: redesign about page

--- a/client/src/components/AboutUs/AboutUs.scss
+++ b/client/src/components/AboutUs/AboutUs.scss
@@ -1,4 +1,21 @@
-.about-us-container {
-    display: flex;
-    flex-direction: column;
+.about-us-image {
+    .ant-image {
+        width: 100%;
+        height: auto;
+        img {
+            width: 100%;
+            height: 50vh;
+            object-fit: cover;
+        }
+    }
+}
+
+.about-us-grid {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+}
+
+.about-us-map {
+    grid-column: 1 / 3;
 }
