feat: add about us link

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -55,9 +55,10 @@ body {
       overflow: hidden;
     }
     span {
-      display: block;
+      display: flex;
       color: #fff;
       font-size: 22px;
+      line-height: 1;
     }
   }
   .header-cart {
