--- a/client/src/components/CardMenu/CardMenu.scss
+++ b/client/src/components/CardMenu/CardMenu.scss
@@ -15,6 +15,24 @@
             color: #ff9800;
         }
     }
+    &__cover-mask {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+    }
+    &__cover {
+        position: relative;
+        display: block;
+        cursor: default;
+        .ant-image,
+        .ant-image img {
+            display: block;
+        }
+    }
     &__content {
         display: flex;
         flex-direction: column;
